# openapi.yaml
@@ -69,7 +69,7 @@ components:
       required: false
       schema:
         type: string
-        enum: [ios, android]
+        enum: [ios, android, desktop]
     NativeBundleIdHeader:
       name: X-ESR-Bundle-Id
       in: header
@@ -301,7 +301,7 @@ components:
           format: uuid
         platform:
           type: string
-          enum: [ios, android]
+          enum: [ios, android, desktop]
         bundleId:
           type: string
         verifiedAt:
@@ -1186,6 +1186,8 @@ paths:
                       type: string
                     android:
                       type: string
+                    desktop:
+                      type: string
                 clientSecret:
                   type: string
                   minLength: 16
@@ -1387,7 +1389,7 @@ paths:
               properties:
                 platform:
                   type: string
-                  enum: [ios, android]
+                  enum: [ios, android, desktop]
                 bundleId:
                   type: string
                 verified:
@@ -1765,7 +1767,7 @@ paths:
               properties:
                 platform:
                   type: string
-                  enum: [ios, android]
+                  enum: [ios, android, desktop]
                 bundleId:
                   type: string
       responses:
